--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>SOY EL BLOG</h1>
-</body>
+    <nav>
+      <ul>
+        <li>
+          <a href="./index.html">INICIO</a>
+        </li>
+        <li>
+          <a href="./nosotros.html">NOSOTROS</a>
+        </li>
+        <li>
+          <a href="./portfolio.html">PORTAFOLIO</a>
+        </li>
+        <li>
+          <a href="./blog.html">BLOG</a>
+        </li>
+        <li>
+          <a href="./contacto.html">CONTACTO</a>
+        </li>
+      </ul>
+    </nav>
+  </body>
 </html>
