--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vistas</title>
+    <title>Inicio</title>
   </head>
   <body>
+    <h1>SOY EL INICIO</h1>
     <nav>
       <ul>
-        <a href="./inicio.html">INICIO</a>
-      </ul>
-      <ul>
-        <a href="./nosotros.html">NOSOTROS</a>
-      </ul>
-      <ul>
-        <a href="./portfolio.html">PORTAFOLIO</a>
-      </ul>
-      <ul>
-        <a href="./blog.html">BLOG</a>
-      </ul>
-      <ul>
-        <a href="./contacto.html">CONTACTO</a>
+        <li>
+          <a href="./index.html">INICIO</a>
+        </li>
+        <li>
+          <a href="./nosotros.html">NOSOTROS</a>
+        </li>
+        <li>
+          <a href="./portfolio.html">PORTAFOLIO</a>
+        </li>
+        <li>
+          <a href="./blog.html">BLOG</a>
+        </li>
+        <li>
+          <a href="./contacto.html">CONTACTO</a>
+        </li>
       </ul>
     </nav>
   </body>
