--- a/portfolio.html
+++ b/portfolio.html
@@ -7,5 +7,24 @@
 </head>
 <body>
     <h1>SOY EL PORTFOLIO</h1>
+    <nav>
+        <ul>
+            <li>
+              <a href="./index.html">INICIO</a>
+            </li>
+            <li>
+              <a href="./nosotros.html">NOSOTROS</a>
+            </li>
+            <li>
+              <a href="./portfolio.html">PORTAFOLIO</a>
+            </li>
+            <li>
+              <a href="./blog.html">BLOG</a>
+            </li>
+            <li>
+              <a href="./contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+      </nav>
 </body>
 </html>
