--- a/contacto.html
+++ b/contacto.html
@@ -5,26 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
 </head>
-<body>
-    <h1>SOY EL CONTACTO</h1>
-    <nav>
-        <ul>
-            <li>
-              <a href="./index.html">INICIO</a>
-            </li>
-            <li>
-              <a href="./nosotros.html">NOSOTROS</a>
-            </li>
-            <li>
-              <a href="./portfolio.html">PORTAFOLIO</a>
-            </li>
-            <li>
-              <a href="./blog.html">BLOG</a>
-            </li>
-            <li>
-              <a href="./contacto.html">CONTACTO</a>
-            </li>
-          </ul>
-      </nav>
-</body>
+<header><h1>INGRESE SUS DATOS</h1></header>
+  <body>
+    <form action="index.html">
+      <div>
+        <label for="nombre">Ingrese su nombre</label>
+        <input id="nombre" type="text" required />
+      </div>
+      <br />
+      <div>
+        <label for="apellido">Ingrese su apellido</label>
+        <input id="apellido" type="text" required/>
+      </div>
+      <br />
+      <div>
+        <label for="email">Ingrese su email</label>
+        <input id="email" type="email" required />
+      </div>
+      <br />
+      <div>
+        <label for="text">Ingrese su dirección</label>
+        <input id="text" type="text" required />
+      </div>
+      <br />
+      <div>
+        <label for="number">Ingrese su telefono</label>
+        <input id="number" type="number" required />
+      </div>
+      <br />
+      <div>
+        <label for="fecha">Ingrese su fecha de nacimiento</label>
+        <input id="fecha" type="date" required />
+      </div>
+      <br />
+      <div>
+        <label for="">Escoga el curso que desee matricularse</label>
+        <select name="" id="">
+          <option value="0">Desarrollo Front-End</option>
+          <option value="1">Desarrollo Back-End</option>
+          <option value="2">Diseño UX/UI</option>
+        </select>
+      </div>
+      <br />
+      <div>
+        <label for="fecha">Ingrese su fecha de nacimiento</label>
+        <input id="fecha" type="date" required />
+      </div>
+      <br />
+      <div>
+        <label for="text"></label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+      </div>
+      <!-- <input type="submit" value="Enviar" /> -->
+      <button type="submit">Enviar</button>
+      <br>
+    </form>
+  </body>
+  <br>
+  <footer>DERECHOS RESERVADOS 2023</footer>
 </html>
