--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
       <br />
       <div>
         <label for="text">Ingrese su dirección</label>
-        <input id="text" type="text" required />
+        <input id="text" type="text" />
       </div>
       <br />
       <div>
